syntax = "proto3";

package manager.api.entity;

option go_package = "manager/api/entity;entity";
option java_multiple_files = true;
option java_package = "manager.api.entity";

import "api/entity/proto/entity.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";


service Entity{
  // LoadEntity 载入全部系统的实体
  rpc LoadEntity (google.protobuf.Empty) returns (LoadEntityReply) {
    option (google.api.http) = {
      get: "/manager/api/v1/load/entities"
    };
  }

  // ImportEntity 载入全部系统的实体
  rpc ImportEntity (ImportEntityRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/manager/api/v1/import/entities",
      body: "*"
    };
  }
  
  // ListEntity 获取部门信息列表
  rpc ListEntity (ListEntityRequest) returns (ListEntityReply) {
    option (google.api.http) = {
      get: "/manager/api/v1/entities",
    };
  }

  // CreateEntity 创建部门信息
  rpc CreateEntity (CreateEntityRequest) returns (CreateEntityReply) {
    option (google.api.http) = {
      post: "/manager/api/v1/entity",
      body: "*"
    };
  }

  // UpdateEntity 更新部门信息
  rpc UpdateEntity (UpdateEntityRequest) returns (UpdateEntityReply) {
    option (google.api.http) = {
      put: "/manager/api/v1/entity",
      body: "*"
    };
  }

  // DeleteEntity 删除部门信息
  rpc DeleteEntity (DeleteEntityRequest) returns (DeleteEntityReply) {
    option (google.api.http) = {
      delete: "/manager/api/v1/entity",
    };
  }

  // ListEntityField 获取部门分类列表
  rpc ListEntityField (ListEntityFieldRequest) returns (ListEntityFieldReply) {
    option (google.api.http) = {
      get: "/manager/api/v1/entity/fields",
    };
  }

  // CreateEntityField 创建部门分类
  rpc CreateEntityField (CreateEntityFieldRequest) returns (CreateEntityFieldReply) {
    option (google.api.http) = {
      post: "/manager/api/v1/entity/field",
      body: "*"
    };
  }

  // UpdateEntityField 更新部门分类
  rpc UpdateEntityField (UpdateEntityFieldRequest) returns (UpdateEntityFieldReply) {
    option (google.api.http) = {
      put: "/manager/api/v1/entity/field",
      body: "*"
    };
  }

  // DeleteEntityField 删除部门分类
  rpc DeleteEntityField (DeleteEntityFieldRequest) returns (DeleteEntityFieldReply) {
    option (google.api.http) = {
      delete: "/manager/api/v1/entity/field",
    };
  }

  // ListEntityRule 获取实体规则列表
  rpc ListEntityRule (ListEntityRuleRequest) returns (ListEntityRuleReply) {
    option (google.api.http) = {
      get: "/manager/api/v1/entity/rules",
    };
  }

  // CreateEntityRule 创建实体规则
  rpc CreateEntityRule (CreateEntityRuleRequest) returns (CreateEntityRuleReply) {
    option (google.api.http) = {
      post: "/manager/api/v1/entity/rule",
      body: "*"
    };
  }

  // UpdateEntityRule 更新实体规则
  rpc UpdateEntityRule (UpdateEntityRuleRequest) returns (UpdateEntityRuleReply) {
    option (google.api.http) = {
      put: "/manager/api/v1/entity/rule",
      body: "*"
    };
  }

  // DeleteEntityRule 删除实体规则
  rpc DeleteEntityRule (DeleteEntityRuleRequest) returns (DeleteEntityRuleReply) {
    option (google.api.http) = {
      delete: "/manager/api/v1/entity/rule",
    };
  }
}